# FinED

./: dune-project
_build/: .db  .digest-db  log
_build/default/: FinED.dune-package  FinED.install  README.md
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/543729eb1c4aec3da6cb30bc30dceb5a/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: aid.cma  aid.cmxa  aid.cmxs  aid.ml  aid.pp.ml  grant.cma  grant.cmxa  grant.cmxs  grant.pp.ml  investment.cma  investment.cmxa  investment.cmxs  investment.ml  investment.pp.ml  market.cma  market.cmxa  market.cmxs  market.pp.ml  user.cma  user.cmxa  user.cmxs  user.ml  user.pp.ml
_build/default/lib/.aid.objs/byte/: aid.cmi  aid.cmo  aid.cmt
_build/default/lib/.aid.objs/native/: aid.cmx
_build/default/lib/.grant.objs/byte/: grant.cmi  grant.cmo  grant.cmt
_build/default/lib/.grant.objs/native/: grant.cmx
_build/default/lib/.investment.objs/byte/: investment.cmi  investment.cmo  investment.cmt
_build/default/lib/.investment.objs/native/: investment.cmx
_build/default/lib/.market.objs/byte/: market.cmi  market.cmo  market.cmt
_build/default/lib/.market.objs/native/: market.cmx
_build/default/lib/.merlin-conf/: lib-aid  lib-grant  lib-investment  lib-market  lib-user
_build/default/lib/.user.objs/byte/: user.cmi  user.cmo  user.cmt
_build/default/lib/.user.objs/native/: user.cmx
_build/default/test/.merlin-conf/: exe-test_FinED
_build/default/test/.test_FinED.eobjs/byte/: dune__exe__Test_FinED.cmi  (+1 more)
lib/: dune  grant.ml  market.ml
src/lib/: dune
test/: dune
(+4 files in other folders)
