(library
 (name user)
 (modules user)
 (libraries core aid grant portfolio market_analysis)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name aid)
 (modules aid)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name grant)
 (modules grant)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name portfolio)
 (modules portfolio)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name market_analysis)
 (modules market_analysis)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))
